<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Alpha2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="common_btn_back">Back</string>
    <string name="common_btn_cancel">Cancel </string>
    <string name="common_btn_confirm">Confirm</string>
    <string name="common_btn_edit">Edit</string>
    <string name="common_btn_skip">Skip </string>
    <string name="common_btn_finish">Complete</string>
    <string name="common_btn_start">Start</string>
    <string name="common_btn_next">Next</string>
    <string name="common_btn_submit">Submit </string>
    <string name="common_search_text">Search</string>
    <string name="common_update_text">Update</string>
    <string name="common_input_search_content">Enter a keyword</string>
    <string name="common_sel_country">Select</string>
    <string name="common_btn_close">Close</string>
    <string name="common_btn_retry">Retry</string>
    <string name="local_action_list_disconnect">Disconnecting</string>
    <string name="local_action_list_start">Start</string>
    <string name="local_action_list_stop">Stop</string>
    <string name="local_action_list_refresh">Refresh</string>
    <string name="local_action_list_reset">Reset</string>
    <string name="local_action_list_power_off">Power Off</string>
    <string name="local_action_list_title">Action List</string>
    <string name="local_action_uninstall_action_tips">Do you want to delete this action?</string>
    <string name="local_action_uninstall_action_tips_success">deleted</string>
    <string name="local_action_uninstall_action_tips_failed">Delete failed</string>
    <string name="main_page_uninstall">uninstall</string>
    <string name="sonic_open_power_button_tips">Press and hold the RED button on Alpha’s head (see previous figure). \n Then, release the button. The indicator will flash and \n Alpha will announce, “Sonar has started.”</string>
    <string name="sonic_keep_far_tips">Keep Alpha and the mobile phone within 1m of each other</string>
    <string name="sonic_voice_open">Sonar has started</string>
    <string name="sonic_open_voice">Start Sonar</string>
    <string name="sonic_send_voice">Send sonar signals</string>
    <string name="sonic_choose_other_model">Select another method</string>
    <string name="set_wifi_title">Set wifi for the robot</string>
    <string name="wifi_title">Enter</string>
    <string name="wifi_input_name"> WiFi Name</string>
    <string name="wifi_input_psw">WiFi Password</string>
    <string name="wifi_psw_isempty">The WiFi password cannot be blank.</string>
    <string name="wifi_name_isempty">The WiFi name cannot be blank.</string>
    <string name="wifi_show_psw">Show password</string>
    <string name="wifi_confirm_name">Check if the WiFi name is correct.</string>
    <string name="wifi_input_wifi_tips">Please connect to the same WiFi network as on your mobile phone. Also, make sure the name and password are correct.</string>
    <string name="wifi_scan">Scan for the WiFi network.</string>
    <string name="wifi_open_location_permission"> open location authority for Alpha 2?</string>
    <string name="wifi_closed">open wifi</string>
    <string name="wifi_psw_inccrect">The password must contain at least 8 characters.</string>
    <string name="wifi_guide_open_persion_wifi_tips1">You have not set your personal hotspot.</string>
    <string name="wifi_guide_open_persion_wifi_tips2">How to Start Your Hotspot</string>
    <string name="wifi_guide_open_persion_wifi_tips3">Please choose “Settings >Portale WLANL hostpot” to start your hotspot.</string>
    <string name="wifi_guide_open_persion_wifi_tips4">Your hotspot will be shown after it is started. Remember its name and password.</string>
    <string name="wifi_guide_go_setting">Go to Start</string>
    <string name="wifi_name_too_long">Wi-Fi name is too long</string>
    <string name="wifi_psw_too_long">Wi-Fi password is too long</string>
    <string name="wifi_info_sending_by_sonic">Sending ...</string>
    <string name="wifi_info_sending_time"> This procedure will take</string>
    <string name="wifi_info_sending_wait">, please be patient...</string>
    <string name="wifi_add_tips">Enter the network information </string>
    <string name="wifi_free_wifi">free WiFi</string>
    <string name="wifi_error">connection failed,\n could you reselect a wifi or input the password</string>
    <string name="net_listener_title">Enabling Network</string>
    <string name="net_connecting">The device is connecting to the network</string>
    <string name="net_connect_title">Connect</string>
    <string name="net_failed_cooee_tips">1. Please check if the Wi-Fi information you have entered is correct \n2. Please make sure your mobile phone is within 1 meter from the Alpha \n3. Please ensure you have enabled the Network Monitoring on Alpha \n4. Network connection timeout</string>
    <string name="net_failed_sonic_tips">1. Please check if the Wi-Fi information you entered is correct \n2. Please make sure your mobile phone is within 1 meter from the Alpha \n3. Please ensure you have enabled the Sound Wave on Alpha \n4. Network connection timeout</string>
    <string name="net_connected_failed">Failed</string>
    <string name="qr_scan">Scan QR code</string>
    <string name="qr_scan_success">Scanned sccessful</string>
    <string name="qr_scan_encode_qr">The qr code will be generated </string>
    <string name="qr_scan_tips">Keep the QR code within 20cm-40cm of the robot\'s camera until heard the tone</string>
    <string name="qr_scan_tips_rule">1.Keep the QR code within 20cm-40cm of the robot\'s camera until heard the tone</string>
    <string name="qr_scan_tips_content">Distance and angle are related to the success rate of scanning</string>
    <string name="qr_scan_open_cameral_tips">2.restart camera</string>
    <string name="qr_scan_low_light_tips">2.Is the light too dark?</string>
    <string name="qr_scan_low_light_tips_content">the light is too dark,robot can\'t scan the QR code</string>
    <string name="qr_scan_do_others_tip_content">You can do other things ,during the process</string>
    <string name="qr_scan_do_others_tip">Do ohter things</string>
    <string name="permission_request_camera">Can not use the sweep function, please turn on the camera to set the relevant permissions</string>
    <string name="encode_code_fail">Failed to generate QR code. Please try again</string>
    <string name="connect_guide_title">Connection Wizard</string>
    <string name="connect_guide_tips1">1. Please make sure the WiFi name and password are correct.</string>
    <string name="connect_guide_tips2"> 2. Please check your network status.</string>
    <string name="connect_guide_tips3"> 3. Please confirm that your mobile phone is not  muted and that the volume is turned up.</string>
    <string name="connect_guide_tips4"> 4. When connecting to the network, make sure your mobile phone is  close to the robot  (Fig. 1).</string>
    <string name="connect_guide_tips5">5. After sending the network information, press the button located on the robot\'s head as indicated on the picture below (Fig. 2).</string>
    <string name="connect_guide_open_tips">Press and hold the button of the robot as shown in the figure until you hear the tone, which indicates the start of the monitoring function.</string>
    <string name="connect_guide_tips6">6. After doing so, please send the network infromation within 20 seconds. </string>
    <string name="connect_net_success">Are you unable to connect to a network?</string>
    <string name="connect_net_resend">Resend</string>
    <string name="connect_net_disable_net">Unable to connect to the network?</string>
    <string name="connect_guide_icon_1">(Fig. 1)</string>
    <string name="connect_guide_icon_2">(Fig. 2)</string>
    <string name="connect_guide_icon_3">(Fig. 3)</string>
    <string name="connect_guide_tips7">7. Contact Us</string>
    <string name="connect_guide_tips7_tips">* If the problem persists, contact us at:</string>
    <string name="connect_guide_our_email">Customer Service E-mail: service@ubtrobot.com</string>
    <string name="connect_guide_our_phone">Customer Service Hotline: 0755-8888 8888</string>
    <string name="connect_guide_tips6_tips">If 20 seconds have passed, repeat step 5</string>
    <string name="connect_disable_voice">Didn\'t hear the notification tone?</string>
    <string name="connect_guide_disable_voice_tips1">If Alpha answers \"whats up\" when you say "hello Alpha" to it.</string>
    <string name="connect_guide_disable_voice_tips1_tips">That means the robot is awakened.</string>
    <string name="connect_guide_disable_voice_tips2">Please keep your ambient environment quiet when saying \"connect to wifi\".</string>
    <string name="connect_guide_disable_voice_tips2_tips">If Alpha cannot be waken up or low battery，please recharge Alpha</string>
    <string name="connect_guide_disable_voice_tips3">If you still can\'t heard alpha\'s response，you can try this</string>
    <string name="connect_guide_disable_voice_tips3_tips">After wake Alpha up，long press the light which in front of its head</string>
    <string name="connect_guide_disable_voice_tips4_tips">Until Alpha say \"start to connect wifi\"</string>
    <string name="connect_guide_open_alpha_net_listener">While the robot is on,\n press and hold the location on its head as shown in the figure until a tone is heard.</string>
    <string name="connect_guide_keep_close">* keep the robot within 1 meter from your mobile device</string>
    <string name="connect_guide_close_tips1">* to raise the volume of your phone, move your phone close to the robot</string>
    <string name="connect_guide_tips_listent">4.Contact us</string>
    <string name="connect_open_next">Next</string>
    <string name="connect_net_success_tips">network connection successful!</string>
    <string name="connect_page_skip">Skip...</string>
    <string name="connect_sending_net_info">robot connecting to network...</string>
    <string name="connect_exist_send_net_info">Exit network connect?</string>
    <string name="connect_btn_exist">exit</string>
    <string name="connect_btn_countine_wait">wait</string>
    <string name="ui_login">Login </string>
    <string name="ui_register">Sign Up</string>
    <string name="ui_email_empty_note">The e-mail address cannot be blank</string>
    <string name="ui_phone_empty_note">The mobile number cannot be blank</string>
    <string name="ui_pass_empty_note">The password cannot be blank</string>
    <string name="ui_re_pass_empty_note">The re-entered password cannot be blank</string>
    <string name="ui_by_phone">Phone</string>
    <string name="ui_by_email">E-mail</string>
    <string name="ui_email_input"> E-mail address </string>
    <string name="ui_phone_input"> Mobile number</string>
    <string name="alarm_time">Time </string>
    <string name="alarm_remind">Reminder</string>
    <string name="alarm_repeat">repeat</string>
    <string name="alarm_repeat_once">Once only</string>
    <string name="alarm_repeat_everyday">Daily</string>
    <string name="alarm_repeat_everyweek">Weekly</string>
    <string name="alarm_repeat_everymonth">Monthly</string>
    <string name="alarm_sava">Save</string>
    <string name="alarm_content">content</string>
    <string name="alarm_monday">Mon</string>
    <string name="alarm_tuesday">Tue</string>
    <string name="alarm_wednesday">Wed</string>
    <string name="alarm_thursday">Thur</string>
    <string name="alarm_friday">Fri</string>
    <string name="alarm_saturday">Sat</string>
    <string name="alarm_sunday">Sun</string>
    <string name="alarm_detail">Alarm detail</string>
    <string name="list_load_full">load all</string>
    <string name="list_no_data">no data</string>
    <string name="list_more">loading</string>
</resources>